# prosidy-haskell

./: .gitignore  changelog.pro  prosidy.cabal
Prosidy/: AbstractSyntax.hs  ConcreteSyntax.hs  Foundation.hs  GenerationConcepts.hs  JsonConcepts.hs  OpticsConcepts.hs
prosidy-abstract-syntax/: ChangeLog.md  ChangeLog.pro  README.md  README.pro  prosidy-abstract-syntax.cabal
prosidy-abstract-syntax/src/Prosidy/: AbstractSyntax.hs
prosidy-abstract-syntax/src/Prosidy/AbstractSyntax/: Base.hs  Foundation.hs  JSON.hs
prosidy-abstract-syntax/src/Prosidy/AbstractSyntax/Foundation/: Base.hs
prosidy-ast/: ChangeLog.md  README.md
prosidy-ast/src/Prosidy/: AST.hs
prosidy-concrete-syntax/: ChangeLog.pro  README.pro  prosidy-concrete-syntax.cabal
tools/: default.nix  ghcide.sh  haskell.nix  shell.nix  update-versions  versions.json
