cabal-version: 3.0

name: prosidy
version: 0

license: MPL-2.0
license-file: license.txt

extra-source-files:
    readme.pro
    changelog.pro

common all
    default-language: Haskell2010
    hs-source-dirs: .

    -- The `Data.Kind` module was introduced in version 4.9.0.0
    -- of the `base` package, so we require at least this version.
    build-depends: base >= 4.9.0.0

    -- The most recent version of the `base` package that we have
    -- tested with is 4.12.0.0, so we cannot promise that it will
    -- work with `base` version 4.13 or greater.
    build-depends:  base < 4.13

    build-depends: optics

library abstract-syntax
    import: all
    visibility: public
    exposed-modules: Prosidy.AbstractSyntax

library concrete-syntax
    import: all
    visibility: public
    exposed-modules: Prosidy.ConcreteSyntax
