cabal-version: 1.12

name:           prosidy-abstract-syntax
version:        0
synopsis:       ...
description:    ...

homepage:       https://github.com/.../prosidy-haskell
bug-reports:    https://github.com/.../prosidy-haskell/issues

author:         ...
maintainer:     ...
copyright:      ...

license:        MPL-2.0
license-file:   LICENSE

build-type:     Simple

extra-source-files:
    README.pro
    ChangeLog.pro

source-repository head
    type: git
    location: https://github.com/.../prosidy-haskell

library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:

        -- This package only defines one module:
        Prosidy.AbstractSyntax

    build-depends:

        -- The `Data.Kind` module was introduced in version 4.9.0.0
        -- of the `base` package, so we require at least this version.
        base >= 4.9.0.0

        -- The most recent version of the `base` package that we have
        -- tested with is 4.12.0.0, so we cannot promise that it will
        -- work with `base` version 4.13 or greater.
      , base < 4.13
