cabal-version: 1.12

name:           prosidy-concrete-syntax
version:        0
synopsis:       ...
description:    ...

homepage:       https://github.com/.../prosidy-haskell
bug-reports:    https://github.com/.../prosidy-haskell/issues

author:         ...
maintainer:     ...
copyright:      ...

license:        MPL-2.0
license-file:   LICENSE

build-type:     Simple

extra-source-files:
    README.pro
    ChangeLog.pro

source-repository head
    type: git
    location: https://github.com/.../prosidy-haskell

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: Prosidy.ConcreteSyntax
    build-depends:
        base >=4.7 && <5
      , containers
      , text
